src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description field on merchandise</description>
        <inlineHelpText>upto 255 characters</inlineHelpText>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Inventory__c</fullName>
        <label>Total Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>